# nico_bot

./: bot.py  main.py  pyproject.toml
nico_bot/: download.py  env.py  model.py  sm.py  upload.py  url.py
systemd/: nico.service  nico_bot.service
tests/: test_url.py
